--- a/index.html
+++ b/index.html
@@ -1,172 +1,316 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Typing Speed Test App - Advanced</title>
-  <style>
-    :root{
-      --bg:#f7fafc;
-      --card:#fff;
-      --accent:#1a73e8;
-      --accent-hover:#1558b0;
-      --font-main:'Segoe UI',sans-serif;
-    }
-    *{box-sizing:border-box;margin:0;padding:0}
-    body{
-      min-height:100vh;display:flex;align-items:center;justify-content:center;font-family:var(--font-main);background:var(--bg);padding:20px;
-      animation:fadeIn 1s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from{opacity:0;transform:translateY(20px)}
-      to{opacity:1;transform:translateY(0)}
-    }
-    .card{
-      width:900px;max-width:100%;background:var(--card);padding:20px;border-radius:12px;box-shadow:0 10px 30px rgba(16,24,40,0.08);
-      display:flex;flex-direction:column;gap:12px;position:relative;
-    }
-    h1{font-size:22px;position:relative;}
-    h1::after{
-      content:'';position:absolute;left:0;bottom:-5px;width:50px;height:3px;background:var(--accent);
-      animation:slideIn 1s ease forwards;
-    }
-    @keyframes slideIn{
-      from{width:0}
-      to{width:50px}
-    }
-    .paragraph{
-      background:#f3f6fb;border:1px solid #e6eefb;padding:16px;border-radius:8px;color:#0b1220;line-height:1.4
-    }
-    textarea{
-      width:100%;min-height:120px;padding:12px;border-radius:8px;border:1px solid #dbe6f6;font-size:15px;resize:vertical;transition:border-color .3s;
-    }
-    textarea:focus{border-color:var(--accent);outline:none}
-    .controls{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
-    .btn{
-      padding:8px 12px;border-radius:8px;border:none;cursor:pointer;transition:background .3s, transform .2s;
-      background:var(--accent);color:#fff;flex-shrink:0
-    }
-    .btn:hover{background:var(--accent-hover);transform:translateY(-2px)}
-    .btn.secondary{background:#fff;color:#111;border:1px solid rgba(16,24,40,0.08)}
-    .stats{display:flex;gap:16px;flex-wrap:wrap}
-    .stat{background:#f7fbff;padding:10px;border-radius:8px;border:1px solid #e6f0ff}
-    .small{font-size:13px;color:#5b6b76}
-    @media(max-width:600px){
-      .controls,.stats{flex-direction:column;align-items:flex-start}
-    }
-    /* Decorative pseudo-elements */
-    .card::before{
-      content:'';position:absolute;top:-10px;right:-10px;width:40px;height:40px;background:var(--accent);border-radius:50%;opacity:0.1;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Typing Speed Test</title>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+<style>
+  /* Light Theme Colors */
+  :root {
+    --bg-light: #f5f7fa;
+    --header-footer-light: linear-gradient(90deg, #3b82f6, #9333ea);
+    --text-light: #333;
+    --card-bg-light: white;
+    --input-bg-light: white;
+    --input-border-light: #ccc;
+    --button-bg-light: #3b82f6;
+    --button-hover-light: #2563eb;
+    --level-bg-light: #cba4e6;
+    --level-hover-light: #b084cc;
+    --level-active-light: #3b82f6;
+  }
+  /* Dark Theme Colors */
+  body.dark {
+    --bg-light: #121217;
+    --header-footer-light: linear-gradient(90deg, #5a4a86, #7d5dbf);
+    --text-light: #eee;
+    --card-bg-light: #1f1f2e;
+    --input-bg-light: #2a2a40;
+    --input-border-light: #7d5dbf;
+    --button-bg-light: #7d5dbf;
+    --button-hover-light: #5a4a86;
+    --level-bg-light: #7d5dbf;
+    --level-hover-light: #6b4ca1;
+    --level-active-light: #594f72;
+  }
+
+  /* General reset */
+  * {
+    margin: 0; padding: 0; box-sizing: border-box;
+    font-family: Arial, sans-serif;
+  }
+  body {
+    background: var(--bg-light);
+    color: var(--text-light);
+    display: flex; flex-direction: column;
+    min-height: 100vh;
+    transition: background 0.3s, color 0.3s;
+  }
+  header {
+    background: var(--header-footer-light);
+    color: white;
+    padding: 12px 20px;
+    font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2rem;
+    transition: background 0.3s;
+  }
+  #title {
+    user-select: none;
+  }
+  #themeToggle {
+    font-size: 1.4rem;
+    cursor: pointer;
+    user-select: none;
+    transition: transform 0.3s;
+  }
+  #themeToggle:hover {
+    transform: rotate(20deg);
+  }
+  .levels {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 20px 0 10px;
+  }
+  .level-box {
+    padding: 8px 22px;
+    border-radius: 20px;
+    cursor: pointer;
+    background: var(--level-bg-light);
+    color: white;
+    font-weight: 600;
+    user-select: none;
+    transition: background 0.3s, transform 0.2s;
+    box-shadow: 0 2px 8px rgba(59,130,246,0.3);
+  }
+  .level-box:hover {
+    background: var(--level-hover-light);
+    transform: scale(1.05);
+  }
+  .level-box.active {
+    background: var(--level-active-light);
+    box-shadow: 0 3px 12px rgba(59,130,246,0.7);
+    transform: scale(1.1);
+  }
+  .container {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+  }
+  .card {
+    background: var(--card-bg-light);
+    max-width: 600px;
+    width: 100%;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    text-align: center;
+    color: var(--text-light);
+    transition: background 0.3s, color 0.3s;
+  }
+  .sentence {
+    font-size: 1.1rem;
+    margin-bottom: 20px;
+    min-height: 56px;
+  }
+  textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    font-size: 1rem;
+    border-radius: 8px;
+    border: 2px solid var(--input-border-light);
+    outline: none;
+    resize: none;
+    background: var(--input-bg-light);
+    color: var(--text-light);
+    transition: border-color 0.3s, background 0.3s, color 0.3s;
+  }
+  textarea:focus {
+    border-color: var(--button-bg-light);
+  }
+  .stats {
+    margin-top: 18px;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--text-light);
+    transition: color 0.3s;
+  }
+  .buttons {
+    margin-top: 20px;
+  }
+  button {
+    padding: 10px 22px;
+    margin: 0 10px;
+    border: none;
+    background: var(--button-bg-light);
+    color: white;
+    border-radius: 8px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+  button:hover {
+    background: var(--button-hover-light);
+  }
+  footer {
+    background: var(--header-footer-light);
+    color: white;
+    text-align: center;
+    padding: 14px;
+    font-weight: 600;
+    font-size: 0.9rem;
+    user-select: none;
+    transition: background 0.3s;
+  }
+</style>
 </head>
 <body>
+
+<header>
+  <div id="title">Typing Speed Test</div>
+  <i id="themeToggle" class="fas fa-moon" title="Toggle Dark/Light Mode" aria-label="Toggle theme"></i>
+</header>
+
+<div class="levels" role="tablist" aria-label="Select difficulty level">
+  <div class="level-box active" role="tab" tabindex="0" aria-selected="true" data-level="easy">Easy</div>
+  <div class="level-box" role="tab" tabindex="-1" aria-selected="false" data-level="medium">Medium</div>
+  <div class="level-box" role="tab" tabindex="-1" aria-selected="false" data-level="hard">Hard</div>
+</div>
+
+<div class="container">
   <div class="card">
-    <h1>Typing Speed Test</h1>
-    <div class="paragraph" id="sourceText">
-      <p id="textContent">The quick brown fox jumps over the lazy dog. Practice makes perfect — keep typing to improve your speed and accuracy. Focus on both speed and correctness for best results.</p>
-    </div><textarea id="inputArea" placeholder="Start typing here..." disabled></textarea>
-
-<div class="controls">
-  <button class="btn" id="startBtn">Start Test</button>
-  <button class="btn secondary" id="resetBtn">Reset</button>
-  <button class="btn" id="clickMeBtn">Click Me</button>
-  <div class="small">Time: <span id="timer">0.0</span> s</div>
+    <div class="sentence" id="sentence" aria-live="polite" aria-atomic="true">The quick brown fox jumps over the lazy dog.</div>
+    <textarea id="input" placeholder="Start typing here..." aria-label="Typing input area" disabled></textarea>
+    <div class="stats" aria-live="polite" aria-atomic="true">
+      <span id="speed">Speed: 0</span>
+      <span id="accuracy">Accuracy: 0%</span>
+    </div>
+    <div class="buttons">
+      <button type="button" id="startBtn" disabled>Start</button>
+      <button type="button" id="resetBtn" disabled>Reset</button>
+    </div>
+  </div>
 </div>
 
-<div class="stats">
-  <div class="stat">WPM: <strong id="wpm">0</strong></div>
-  <div class="stat">Accuracy: <strong id="accuracy">0%</strong></div>
-  <div class="stat">Typed: <strong id="typedChars">0</strong> chars</div>
-</div>
+<footer>Developed by Pon Abinaya &amp; Sindhuja</footer>
 
-  </div>  <script>
-    alert('Welcome to the Typing Speed Test!');
+<script>
+  const sentencesByLevel = {
+    easy: [
+      "The quick brown fox jumps over the lazy dog.",
+      "Typing is fun and easy.",
+      "Cats sleep on warm sunny days."
+    ],
+    medium: [
+      "Bright colors and bold ideas make life exciting.",
+      "Practice improves speed and accuracy in typing.",
+      "Every morning she jogs along the riverside path."
+    ],
+    hard: [
+      "Complex algorithms often require patience, precision, and practice.",
+      "Beneath the shimmering stars, the night whispered ancient secrets.",
+      "Typing without looking at the keyboard builds true muscle memory."
+    ]
+  };
 
-    const startBtn = document.getElementById('startBtn');
-    const resetBtn = document.getElementById('resetBtn');
-    const clickMeBtn = document.getElementById('clickMeBtn');
-    const inputArea = document.getElementById('inputArea');
-    const timerEl = document.getElementById('timer');
-    const wpmEl = document.getElementById('wpm');
-    const accuracyEl = document.getElementById('accuracy');
-    const typedCharsEl = document.getElementById('typedChars');
-    const textContent = document.getElementById('textContent').innerText.trim();
-    const paragraphDiv = document.querySelector('.paragraph');
+  let currentLevel = "easy";
+  let currentSentence = sentencesByLevel[currentLevel][0];
+  let startTime = null;
+  let timerInterval = null;
 
-    let startTime = null;
-    let timerInterval = null;
+  const input = document.getElementById("input");
+  const sentenceDisplay = document.getElementById("sentence");
+  const speedDisplay = document.getElementById("speed");
+  const accuracyDisplay = document.getElementById("accuracy");
+  const levelBoxes = document.querySelectorAll(".level-box");
+  const startBtn = document.getElementById("startBtn");
+  const resetBtn = document.getElementById("resetBtn");
+  const themeToggle = document.getElementById("themeToggle");
 
-    function startTest(){
-      inputArea.value = '';
-      inputArea.disabled = false;
-      inputArea.focus();
+  function updateSentence() {
+    const pool = sentencesByLevel[currentLevel];
+    currentSentence = pool[Math.floor(Math.random() * pool.length)];
+    sentenceDisplay.textContent = currentSentence;
+    input.value = "";
+    speedDisplay.textContent = "Speed: 0";
+    accuracyDisplay.textContent = "Accuracy: 0%";
+    startTime = null;
+    clearInterval(timerInterval);
+    input.disabled = true;
+    startBtn.disabled = false;
+    resetBtn.disabled = true;
+  }
+
+  levelBoxes.forEach(box => {
+    box.addEventListener("click", () => {
+      if (box.dataset.level === currentLevel) return;
+      currentLevel = box.dataset.level;
+      levelBoxes.forEach(b => {
+        b.classList.toggle("active", b === box);
+        b.setAttribute("aria-selected", b === box);
+        b.tabIndex = b === box ? 0 : -1;
+      });
+      updateSentence();
+    });
+    box.addEventListener("keydown", e => {
+      if (e.key === "Enter" || e.key === " ") {
+        e.preventDefault();
+        box.click();
+      }
+    });
+  });
+
+  startBtn.addEventListener("click", () => {
+    if (!startTime) {
       startTime = Date.now();
-      timerEl.textContent = '0.0';
-      wpmEl.textContent = '0';
-      accuracyEl.textContent = '0%';
-      typedCharsEl.textContent = '0';
-
-      clearInterval(timerInterval);
-      timerInterval = setInterval(updateTimer, 100);
-
+      input.disabled = false;
+      input.focus();
       startBtn.disabled = true;
+      resetBtn.disabled = false;
+
+      timerInterval = setInterval(() => {
+        const elapsedMinutes = (Date.now() - startTime) / 60000;
+        const typedText = input.value;
+        const wordsTyped = typedText.trim().split(/\s+/).filter(Boolean).length;
+        const speed = Math.round(wordsTyped / elapsedMinutes) || 0;
+        speedDisplay.textContent = `Speed: ${speed}`;
+
+        let correctChars = 0;
+        for (let i = 0; i < typedText.length; i++) {
+          if (typedText[i] === currentSentence[i]) correctChars++;
+        }
+        const accuracy = Math.round((correctChars / currentSentence.length) * 100) || 0;
+        accuracyDisplay.textContent = `Accuracy: ${accuracy}%`;
+      }, 300);
     }
+  });
 
-    function resetTest(){
-      clearInterval(timerInterval);
-      startTime = null;
-      inputArea.value = '';
-      inputArea.disabled = true;
-      timerEl.textContent = '0.0';
-      wpmEl.textContent = '0';
-      accuracyEl.textContent = '0%';
-      typedCharsEl.textContent = '0';
-      startBtn.disabled = false;
+  resetBtn.addEventListener("click", () => {
+    updateSentence();
+  });
+
+  themeToggle.addEventListener("click", () => {
+    document.body.classList.toggle("dark");
+    if (themeToggle.classList.contains("fa-moon")) {
+      themeToggle.classList.replace("fa-moon", "fa-sun");
+    } else {
+      themeToggle.classList.replace("fa-sun", "fa-moon");
     }
+  });
 
-    function updateTimer(){
-      const elapsed = (Date.now() - startTime) / 1000;
-      timerEl.textContent = elapsed.toFixed(1);
-      calculateStats(elapsed);
-    }
+  // Initialize
+  updateSentence();
+</script>
 
-    function calculateStats(elapsedSeconds){
-      const typed = inputArea.value;
-      const typedChars = typed.length;
-      typedCharsEl.textContent = typedChars;
-      const wordsTyped = typedChars / 5;
-      const minutes = elapsedSeconds / 60;
-      const wpm = minutes > 0 ? Math.round(wordsTyped / minutes) : 0;
-      wpmEl.textContent = wpm;
-      let correct = 0;
-      for(let i=0;i<typedChars && i<textContent.length;i++){
-        if(typed[i] === textContent[i]) correct++;
-      }
-      const accuracy = typedChars === 0 ? 0 : Math.round((correct / typedChars) * 100);
-      accuracyEl.textContent = accuracy + '%';
-    }
-
-    inputArea.addEventListener('input', ()=>{
-      const typed = inputArea.value;
-      if(startTime && typed.length >= textContent.length){
-        clearInterval(timerInterval);
-        const elapsed = (Date.now() - startTime) / 1000;
-        updateTimer();
-        calculateStats(elapsed);
-        startBtn.disabled = false;
-      }
-    });
-
-    clickMeBtn.addEventListener('click', ()=>{
-      const colors = ['#ffe4e1','#e6ffe6','#e6f0ff','#fff5e6'];
-      const randomColor = colors[Math.floor(Math.random()*colors.length)];
-      paragraphDiv.style.background = randomColor;
-      paragraphDiv.innerHTML = `<p>🎉 You clicked the button! Background changed to a new color.</p>`;
-    });
-
-    startBtn.addEventListener('click', startTest);
-    resetBtn.addEventListener('click', resetTest);
-
-    resetTest();
-  </script></body>
+</body>
 </html>
