--- a/index.html
+++ b/index.html
@@ -1,316 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Typing Speed Test</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
-<style>
-  /* Light Theme Colors */
-  :root {
-    --bg-light: #f5f7fa;
-    --header-footer-light: linear-gradient(90deg, #3b82f6, #9333ea);
-    --text-light: #333;
-    --card-bg-light: white;
-    --input-bg-light: white;
-    --input-border-light: #ccc;
-    --button-bg-light: #3b82f6;
-    --button-hover-light: #2563eb;
-    --level-bg-light: #cba4e6;
-    --level-hover-light: #b084cc;
-    --level-active-light: #3b82f6;
-  }
-  /* Dark Theme Colors */
-  body.dark {
-    --bg-light: #121217;
-    --header-footer-light: linear-gradient(90deg, #5a4a86, #7d5dbf);
-    --text-light: #eee;
-    --card-bg-light: #1f1f2e;
-    --input-bg-light: #2a2a40;
-    --input-border-light: #7d5dbf;
-    --button-bg-light: #7d5dbf;
-    --button-hover-light: #5a4a86;
-    --level-bg-light: #7d5dbf;
-    --level-hover-light: #6b4ca1;
-    --level-active-light: #594f72;
-  }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Typing Speed Test - Welcome</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Fade-in animation for container */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 1s ease-out forwards;
+        }
 
-  /* General reset */
-  * {
-    margin: 0; padding: 0; box-sizing: border-box;
-    font-family: Arial, sans-serif;
-  }
-  body {
-    background: var(--bg-light);
-    color: var(--text-light);
-    display: flex; flex-direction: column;
-    min-height: 100vh;
-    transition: background 0.3s, color 0.3s;
-  }
-  header {
-    background: var(--header-footer-light);
-    color: white;
-    padding: 12px 20px;
-    font-weight: 700;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.2rem;
-    transition: background 0.3s;
-  }
-  #title {
-    user-select: none;
-  }
-  #themeToggle {
-    font-size: 1.4rem;
-    cursor: pointer;
-    user-select: none;
-    transition: transform 0.3s;
-  }
-  #themeToggle:hover {
-    transform: rotate(20deg);
-  }
-  .levels {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin: 20px 0 10px;
-  }
-  .level-box {
-    padding: 8px 22px;
-    border-radius: 20px;
-    cursor: pointer;
-    background: var(--level-bg-light);
-    color: white;
-    font-weight: 600;
-    user-select: none;
-    transition: background 0.3s, transform 0.2s;
-    box-shadow: 0 2px 8px rgba(59,130,246,0.3);
-  }
-  .level-box:hover {
-    background: var(--level-hover-light);
-    transform: scale(1.05);
-  }
-  .level-box.active {
-    background: var(--level-active-light);
-    box-shadow: 0 3px 12px rgba(59,130,246,0.7);
-    transform: scale(1.1);
-  }
-  .container {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-  }
-  .card {
-    background: var(--card-bg-light);
-    max-width: 600px;
-    width: 100%;
-    padding: 25px;
-    border-radius: 12px;
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    text-align: center;
-    color: var(--text-light);
-    transition: background 0.3s, color 0.3s;
-  }
-  .sentence {
-    font-size: 1.1rem;
-    margin-bottom: 20px;
-    min-height: 56px;
-  }
-  textarea {
-    width: 100%;
-    height: 100px;
-    padding: 10px;
-    font-size: 1rem;
-    border-radius: 8px;
-    border: 2px solid var(--input-border-light);
-    outline: none;
-    resize: none;
-    background: var(--input-bg-light);
-    color: var(--text-light);
-    transition: border-color 0.3s, background 0.3s, color 0.3s;
-  }
-  textarea:focus {
-    border-color: var(--button-bg-light);
-  }
-  .stats {
-    margin-top: 18px;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    font-size: 1rem;
-    font-weight: 700;
-    color: var(--text-light);
-    transition: color 0.3s;
-  }
-  .buttons {
-    margin-top: 20px;
-  }
-  button {
-    padding: 10px 22px;
-    margin: 0 10px;
-    border: none;
-    background: var(--button-bg-light);
-    color: white;
-    border-radius: 8px;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background 0.3s;
-  }
-  button:hover {
-    background: var(--button-hover-light);
-  }
-  footer {
-    background: var(--header-footer-light);
-    color: white;
-    text-align: center;
-    padding: 14px;
-    font-weight: 600;
-    font-size: 0.9rem;
-    user-select: none;
-    transition: background 0.3s;
-  }
-</style>
+        /* Stagger animation delays */
+        .delay-1 { animation-delay: 0.1s; }
+        .delay-2 { animation-delay: 0.3s; }
+        .delay-3 { animation-delay: 0.5s; }
+
+        /* Button hover animation */
+        .btn {
+            display: inline-block;
+            background: #2563eb;
+            color: white;
+            padding: 14px 24px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-size: 1rem;
+            margin-top: 25px;
+            transition: all 0.3s ease-in-out;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        }
+
+        .btn:hover {
+            background: #1e4fc7;
+            transform: translateY(-3px) scale(1.05);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.2);
+        }
+
+        /* Keyframes */
+        @keyframes fadeInUp {
+            0% { opacity: 0; transform: translateY(30px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
 
-<header>
-  <div id="title">Typing Speed Test</div>
-  <i id="themeToggle" class="fas fa-moon" title="Toggle Dark/Light Mode" aria-label="Toggle theme"></i>
-</header>
+    <!-- ===== HEADER ===== -->
+    <header class="fade-in delay-1">
+        <h1>Typing Speed Test</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="type-testing.html">Type Testing</a>
+            <a href="profile.html">Profile</a>
+            <a href="about.html">About</a>
+        </nav>
+    </header>
 
-<div class="levels" role="tablist" aria-label="Select difficulty level">
-  <div class="level-box active" role="tab" tabindex="0" aria-selected="true" data-level="easy">Easy</div>
-  <div class="level-box" role="tab" tabindex="-1" aria-selected="false" data-level="medium">Medium</div>
-  <div class="level-box" role="tab" tabindex="-1" aria-selected="false" data-level="hard">Hard</div>
-</div>
-
-<div class="container">
-  <div class="card">
-    <div class="sentence" id="sentence" aria-live="polite" aria-atomic="true">The quick brown fox jumps over the lazy dog.</div>
-    <textarea id="input" placeholder="Start typing here..." aria-label="Typing input area" disabled></textarea>
-    <div class="stats" aria-live="polite" aria-atomic="true">
-      <span id="speed">Speed: 0</span>
-      <span id="accuracy">Accuracy: 0%</span>
+    <!-- ===== MAIN CONTENT ===== -->
+    <div class="container fade-in delay-2">
+        <h2>Welcome to the Typing Speed Test!</h2>
+        <p>Sharpen your typing skills with our interactive speed test. Track your Words Per Minute (WPM) and accuracy in real-time.</p>
+        <p>Get started now and see how fast you can type!</p>
+        <a href="type-testing.html" class="btn">Start Typing Test</a>
     </div>
-    <div class="buttons">
-      <button type="button" id="startBtn" disabled>Start</button>
-      <button type="button" id="resetBtn" disabled>Reset</button>
-    </div>
-  </div>
-</div>
 
-<footer>Developed by Pon Abinaya &amp; Sindhuja</footer>
-
-<script>
-  const sentencesByLevel = {
-    easy: [
-      "The quick brown fox jumps over the lazy dog.",
-      "Typing is fun and easy.",
-      "Cats sleep on warm sunny days."
-    ],
-    medium: [
-      "Bright colors and bold ideas make life exciting.",
-      "Practice improves speed and accuracy in typing.",
-      "Every morning she jogs along the riverside path."
-    ],
-    hard: [
-      "Complex algorithms often require patience, precision, and practice.",
-      "Beneath the shimmering stars, the night whispered ancient secrets.",
-      "Typing without looking at the keyboard builds true muscle memory."
-    ]
-  };
-
-  let currentLevel = "easy";
-  let currentSentence = sentencesByLevel[currentLevel][0];
-  let startTime = null;
-  let timerInterval = null;
-
-  const input = document.getElementById("input");
-  const sentenceDisplay = document.getElementById("sentence");
-  const speedDisplay = document.getElementById("speed");
-  const accuracyDisplay = document.getElementById("accuracy");
-  const levelBoxes = document.querySelectorAll(".level-box");
-  const startBtn = document.getElementById("startBtn");
-  const resetBtn = document.getElementById("resetBtn");
-  const themeToggle = document.getElementById("themeToggle");
-
-  function updateSentence() {
-    const pool = sentencesByLevel[currentLevel];
-    currentSentence = pool[Math.floor(Math.random() * pool.length)];
-    sentenceDisplay.textContent = currentSentence;
-    input.value = "";
-    speedDisplay.textContent = "Speed: 0";
-    accuracyDisplay.textContent = "Accuracy: 0%";
-    startTime = null;
-    clearInterval(timerInterval);
-    input.disabled = true;
-    startBtn.disabled = false;
-    resetBtn.disabled = true;
-  }
-
-  levelBoxes.forEach(box => {
-    box.addEventListener("click", () => {
-      if (box.dataset.level === currentLevel) return;
-      currentLevel = box.dataset.level;
-      levelBoxes.forEach(b => {
-        b.classList.toggle("active", b === box);
-        b.setAttribute("aria-selected", b === box);
-        b.tabIndex = b === box ? 0 : -1;
-      });
-      updateSentence();
-    });
-    box.addEventListener("keydown", e => {
-      if (e.key === "Enter" || e.key === " ") {
-        e.preventDefault();
-        box.click();
-      }
-    });
-  });
-
-  startBtn.addEventListener("click", () => {
-    if (!startTime) {
-      startTime = Date.now();
-      input.disabled = false;
-      input.focus();
-      startBtn.disabled = true;
-      resetBtn.disabled = false;
-
-      timerInterval = setInterval(() => {
-        const elapsedMinutes = (Date.now() - startTime) / 60000;
-        const typedText = input.value;
-        const wordsTyped = typedText.trim().split(/\s+/).filter(Boolean).length;
-        const speed = Math.round(wordsTyped / elapsedMinutes) || 0;
-        speedDisplay.textContent = `Speed: ${speed}`;
-
-        let correctChars = 0;
-        for (let i = 0; i < typedText.length; i++) {
-          if (typedText[i] === currentSentence[i]) correctChars++;
-        }
-        const accuracy = Math.round((correctChars / currentSentence.length) * 100) || 0;
-        accuracyDisplay.textContent = `Accuracy: ${accuracy}%`;
-      }, 300);
-    }
-  });
-
-  resetBtn.addEventListener("click", () => {
-    updateSentence();
-  });
-
-  themeToggle.addEventListener("click", () => {
-    document.body.classList.toggle("dark");
-    if (themeToggle.classList.contains("fa-moon")) {
-      themeToggle.classList.replace("fa-moon", "fa-sun");
-    } else {
-      themeToggle.classList.replace("fa-sun", "fa-moon");
-    }
-  });
-
-  // Initialize
-  updateSentence();
-</script>
+    <!-- ===== FOOTER ===== -->
+    <footer class="fade-in delay-3">
+        <p>&copy; 2025 Typing Speed Test. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
